# deep-prove

./: .gitignore  .gitmodules  Cargo.toml  README.md  bench.csv  clippy.toml  devenv.nix  mlp-model.onnx
.github/workflows/: docker.yml  layers-quant.yml  mdbook.yml  tests.yml  zkml-mdbook.yml
docker/: deep-prove-worker.dockerfile
docs/src/: SUMMARY.md  commitments.md  dense.md  end_to_end_lu.md  layers.md  lookups.md  overview.md  quantization.md  relu.md  subroutines.md
ff_ext/: Cargo.toml
ff_ext/src/: lib.rs
gkr/: Cargo.toml
gkr/benches/: keccak256.rs
gkr/examples/: keccak256.rs
gkr/src/: macros.rs  prover.rs  structs.rs  utils.rs  verifier.rs
gkr/src/circuit/: circuit_layout.rs  circuit_witness.rs
gkr/src/gadgets/: keccak256.rs
gkr/src/prover/: phase1.rs  phase1_output.rs  phase2.rs  phase2_input.rs  phase2_linear.rs  test.rs
gkr/src/test/: is_zero_gadget.rs
gkr/src/verifier/: phase1.rs  phase1_output.rs  phase2.rs  phase2_input.rs  phase2_linear.rs
mpcs/: Cargo.toml
mpcs/benches/: basecode.rs  basefold.rs  hashing.rs  rscode.rs
mpcs/src/: basefold.rs  lib.rs  util.rs
mpcs/src/basefold/: commit_phase.rs  encoding.rs  query_phase.rs  structure.rs  sumcheck.rs
mpcs/src/basefold/encoding/: basecode.rs  rs.rs
mpcs/src/sum_check/: classic.rs
mpcs/src/sum_check/classic/: coeff.rs
mpcs/src/util/: arithmetic.rs  hash.rs  merkle_tree.rs
multilinear_extensions/: Cargo.toml
multilinear_extensions/src/: mle.rs  test.rs  virtual_poly.rs
poseidon/: Cargo.toml
scripts/ci/: cmp-layers-quant.sh
simple-frontend/: Cargo.toml
simple-frontend/examples/: poseidon.rs
simple-frontend/src/: circuit_builder.rs  structs.rs
simple-frontend/src/circuit_builder/: base_opt.rs  ext_opt.rs
sumcheck/: Cargo.toml
sumcheck/benches/: devirgo_sumcheck.rs
sumcheck/src/: prover.rs  structs.rs  test.rs
sumcheck_macro/: Cargo.toml
sumcheck_macro/src/: lib.rs
transcript/: Cargo.toml
transcript/src/: basic.rs  blake.rs  lib.rs  statistics.rs  synchronized.rs
utils/: Cargo.toml
utils/src/: lib.rs
zkml/: .gitattributes  Cargo.toml  LICENSE  README.md  bench.csv  bench.py  build.rs  cifar_net.pth
zkml/assets/: model.onnx
zkml/assets/models/: README.md
zkml/assets/models/MLP/: mlp.py
zkml/assets/scripts/: README.md  requirements.txt
zkml/assets/scripts/CNN/: cifar-cnn.py  cnn-cifar-01.onnx  lenet-mnist-01.onnx  lenet-mnist.py
zkml/assets/scripts/MLP/: mlp.py  requirements.txt
zkml/assets/scripts/covid/: cnn.py  covid.py
zkml/assets/scripts/llms/: gpt2_internal.py
zkml/docs/: book.toml
zkml/docs/src/: LLMs.md  SUMMARY.md  commitments.md  end_to_end_lu.md  layers.md  maxpool.md  range_check.md  relu.md
zkml/docs/src/llms-layers/: qkv.md
zkml/src/: activation.rs  capture.rs  commit.rs  convolution.rs  dense.rs  lib.rs  logup.rs  lookup.rs  matrix.rs  model.rs  onnx_parse.rs  padding.rs  pooling.rs  prover.rs  quantization.rs  tensor.rs  testing.rs  utils.rs
zkml/src/claims/: mod.rs  precommit.rs  same_poly.rs
zkml/src/commit/: context.rs  mod.rs  precommit.rs  same_poly.rs
zkml/src/iop/: context.rs  mod.rs  prover.rs  verifier.rs
zkml/src/layers/: activation.rs  add.rs  common.rs  concat_matmul.rs  convolution.rs  dense.rs  flatten.rs  hadamard.rs  matmul.rs  matrix_mul.rs  matvec.rs  mod.rs  mul.rs  permute.rs  pooling.rs  requant.rs  reshape.rs
zkml/src/layers/provable/: error.rs  mod.rs  model.rs
zkml/src/layers/transformer/: embeddings.rs  layernorm.rs  logits.rs  mha.rs  mod.rs  positional.rs  qkv.rs  softmax.rs
zkml/src/lookup/: context.rs  logup.rs  mod.rs  utils.rs  witness.rs
zkml/src/lookup/gkr_circuits/: logup.rs  lookups_circuit.rs  mod.rs  table_circuit.rs
zkml/src/lookup/logup_gkr/: circuit.rs  error.rs  mod.rs  prover.rs  structs.rs  verifier.rs
zkml/src/middleware/: mod.rs  v1.rs
zkml/src/model/: iterator.rs  llm.rs  mod.rs  trace.rs
zkml/src/parser/: gguf.rs  json.rs  llm.rs  mod.rs  onnx.rs
zkml/src/quantization/: metadata.rs  mod.rs  strategy.rs
