[workspace]
members = [
  "ff_ext",
  "mpcs",
  "multilinear_extensions",
  "sumcheck_macro",
  "poseidon",
  "sumcheck",
  "transcript",
  "simple-frontend",
  "gkr",
  "zkml",
]
resolver = "2"

[workspace.package]
categories = ["cryptography", "zk", "blockchain", "ceno"]
edition = "2021"
keywords = ["cryptography", "zk", "blockchain", "ceno"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/scroll-tech/ceno"
version = "0.1.0"

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
ark-std = "0.5"
cfg-if = "1.0"
criterion = { version = "0.6", features = ["html_reports"] }
crossbeam-channel = "0.5"
ff = "0.13"
goldilocks = { git = "https://github.com/scroll-tech/ceno-Goldilocks" }
itertools = "0.13"
plonky2 = "1.1"
poseidon = { path = "./poseidon" }
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
timed = { git = "https://github.com/nikkolasg/timed-rs" }
timed-core = { git = "https://github.com/nikkolasg/timed-rs" }


# Test must run fast, but still provides stacktraces.
[profile.test]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true

[profile.test.package."*"]
opt-level = 3

[profile.release]
lto = "fat"

#[patch."https://github.com/nikkolasg/timed-rs"]
#timed = { path = "/Users/nalos/prog/timed/timed" }
#timed-core = { path = "/Users/nalos/prog/timed/timed-core" }
