[package]
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "gkr"
description = "GKR implementation"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
goldilocks.workspace = true

crossbeam-channel.workspace = true
ff_ext = { path = "../ff_ext" }
itertools.workspace = true
p3-field.workspace = true
p3-goldilocks.workspace = true
multilinear_extensions = { path = "../multilinear_extensions" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
simple-frontend = { workspace = true }
sumcheck = { path = "../sumcheck" }
tracing.workspace = true
tracing-flame = { workspace = true }
tracing-subscriber.workspace = true
transcript = { path = "../transcript" }

[dev-dependencies]
cfg-if.workspace = true
criterion.workspace = true
pprof = { workspace = true }
tiny-keccak = { workspace = true, features = ["keccak"] }

[features]
default = []
flamegraph = ["pprof/flamegraph", "pprof/criterion"]
# non_pow2_rayon_thread = ["sumcheck/non_pow2_rayon_thread"]
parallel = []
unsafe = []

# [[bench]]
# harness = false
# name = "keccak256"
