[package]
categories.workspace = true
description = "Multilinear Polynomial Commitment Scheme"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "mpcs"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
aes = { workspace = true }
ark-std.workspace = true
bitvec = { workspace = true }
ctr = { workspace = true }
blake3.workspace = true
ff.workspace = true
ff_ext = { path = "../ff_ext" }
itertools.workspace = true
multilinear_extensions = { path = "../multilinear_extensions" }
num-bigint = { workspace = true }
num-integer = { workspace = true }
plonky2.workspace = true
poseidon.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon = { workspace = true, optional = true }
serde.workspace = true
thiserror = { workspace = true }
transcript = { path = "../transcript" }
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }

[dev-dependencies]
criterion.workspace = true

[features]
benchmark = ["parallel"]
default = ["parallel"] # Add "sanity-check" to debug
parallel = ["dep:rayon"]
print-trace = ["ark-std/print-trace"]
blake = []
sanity-check = []

[[bench]]
harness = false
name = "basefold"

[[bench]]
harness = false
name = "basecode"

[[bench]]
harness = false
name = "rscode"

[[bench]]
harness = false
name = "interpolate"

[[bench]]
harness = false
name = "fft"

[[bench]]
harness = false
name = "utils"

[lints.clippy]
type_complexity = "allow"
