[package]
categories.workspace = true
description = "Multilinear extensions for the Ceno project"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "multilinear_extensions"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ark-std.workspace = true
ff_ext = { path = "../ff_ext" }
p3-field.workspace = true
p3-goldilocks.workspace = true
itertools.workspace = true
rayon.workspace = true
serde.workspace = true
tracing.workspace = true
transcript = { version = "0.1.0", path = "../transcript" }

[dev-dependencies]
env_logger = { workspace = true }
log = { workspace = true }

[features]
parallel = []
