[package]
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "simple-frontend"
description = "simple frontend"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ff_ext = { path = "../ff_ext" }
itertools.workspace = true
p3-field.workspace = true
serde.workspace = true
p3-goldilocks = { workspace = true }
