[package]
categories.workspace = true
description = "Macros for the Ceno project"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "sumcheck_macro"
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
itertools.workspace = true
p3-field.workspace = true
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
ff_ext = { path = "../ff_ext" }
multilinear_extensions = { path = "../multilinear_extensions" }
rayon = { workspace = true }
sumcheck = { path = "../sumcheck" }
