[package]
categories.workspace = true
description = "Transcript generation for Ceno"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "transcript"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
crossbeam-channel.workspace = true
ff_ext = { path = "../ff_ext" }
p3-goldilocks.workspace = true
p3-field.workspace = true
poseidon.workspace = true
serde.workspace = true
p3-poseidon2 = { workspace = true }
blake3.workspace = true
