[package]
name = "utils"
description = "various utils"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
mem-track = ["dep:mem-track"]

[dependencies]
memory-stats = { version = "1.2.0" }
tracing = {workspace = true}
mem-track = { git = "https://github.com/hackaugusto/mem-track", branch = "main", optional = true }
bytesize = "2.0.1"
thousands = "0.2.0"
