[package]
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "zkml"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
ark-std.workspace = true
clap = { workspace = true, features = ["derive"] }
code-timing-macros = { workspace = true, features = ["tracing"] }
csv = { workspace = true }
derive_builder = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
ff_ext = { version = "0.1.0", path = "../ff_ext" }
gkr = { workspace = true }
itertools.workspace = true
mpcs = { workspace = true }
multilinear_extensions = { version = "0.1.0", path = "../multilinear_extensions", features = ["parallel"] }
num-traits = { workspace = true }
once_cell = { workspace = true }
poseidon = { version = "0.1.0", path = "../poseidon" }
rayon.workspace = true
rmp-serde = { workspace = true }
serde.workspace = true
serde_json.workspace = true
simple-frontend = { workspace = true }
statrs = { workspace = true }
sumcheck = { version = "0.1.0", path = "../sumcheck" }
thiserror = { workspace = true }
timed = { workspace = true }
timed-core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tract-onnx = { workspace = true }
transcript = { version = "0.1.0", path = "../transcript" }
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
