[package]
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "zkml"
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "deep-prove-worker"
path = "src/bin/worker.rs"

[[bin]]
name = "deep-prove-cli"
path = "src/bin/cli/main.rs"

[dependencies]
anyhow.workspace = true
ark-std.workspace = true
burn = { version = "0.17.0", features = ["ndarray"] }
candle-core = "0.9.1"
candle-transformers = "0.9.1"
clap = { version = "4", features = ["derive", "env"] }
code-timing-macros = { version = "0.0.6", features = ["tracing"] }
csv = "1.3.1"
derive_builder = "0.20.2"
derive_more = { version = "2.0.1", features = ["full"] }
ff.workspace = true
ff_ext = { version = "0.1.0", path = "../ff_ext" }
gguf-rs = "0.1.4"
gkr = { version = "0.1.0", path = "../gkr" }
goldilocks.workspace = true
hex = "0.4.3"
itertools.workspace = true
mpcs = { version = "0.1.0", path = "../mpcs" }
multilinear_extensions = { version = "0.1.0", path = "../multilinear_extensions", features = [
    "parallel",
] }
num-traits = "0.2.19"
once_cell = "1.20.3"
poseidon = { version = "0.1.0", path = "../poseidon" }
rayon.workspace = true
reqwest = { version = "0.12.19", features = ["blocking"] }
rmp-serde = "1.3.0"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
simple-frontend = { path = "../simple-frontend" }
statrs = "0.18.0"
sumcheck = { version = "0.1.0", path = "../sumcheck" }
thiserror = "2.0.12"
timed = { workspace = true }
timed-core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tract-onnx = "^0.21"
transcript = { version = "0.1.0", path = "../transcript" }

# worker-related dependencies
alloy = { version = "1.0" }
tonic = { version = "0.12.3", features = ["transport", "tls", "tls-roots", "tls-webpki-roots", "gzip"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
futures = { version = "0.3.30" }
prost = { version = "0.13.3" }
prost-types = { version = "0.13.3" }
prost-wkt-types = { version = "0.6.0" }
rustls = { version = "0.23.16", features = ["ring"] }
tokio-stream = { version = "0.1.17" }
grpc-worker = { git = "https://github.com/Lagrange-Labs/grpc-worker-rs", branch = "main" }
url = "2.5.4"
uuid = "1.17.0"
zstd = "0.13.3"

[dev-dependencies]
ndarray = "0.16.1"

[build-dependencies]
# worker-related dependencies
miette = { version = "7.2", features = ["fancy"] }
protox = { version = "0.7.1" }
tonic-build = { version = "0.12.3" }
